# nvcl_reporting

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  RewardingFlakyBookmark.py  config.yaml  constants.py  email.sh  getNVCLBoreholesAndDatasets.py  getNVCLImages.py  getNVCLTotalMetres.py  make_pdf.py  make_plots.py  make_report.py  make_reports.py  pyproject.toml  reports.py  requirements.txt  run_NVCL.py  run_reports.sh  tox.ini
.github/workflows/: nvcl_reporting.yml
batch/: run_reports.sh
db/: build_db.py  read_db.py  readwrite_db.py  schema.py  tsg_metadata.py
docker/: README.md  backup.sh  docker-compose.yml
grafana/: backup.sh  grafanactl_bkup.sh  grizzly_bkup.sh
grafana/grafanactl_bkup/Dashboard/: 56c0b19d-7bf9-4478-9042-882a4f1f900f.json  a1335031-fede-44c4-9f13-2fa8751f5f26.json  a5d439c1-4e69-4087-8da1-e9140751ba35.json
grafana/grizzly_bkup/dashboards/general/: dashboard-56c0b19d-7bf9-4478-9042-882a4f1f900f.yaml  dashboard-a5d439c1-4e69-4087-8da1-e9140751ba35.yaml
grafana/grizzly_bkup/datasources/: datasource-feyisdz5ybdoge.yaml
grafana/resources/dashboards/general/: dashboard-a1335031-fede-44c4-9f13-2fa8751f5f26.yaml
k8s/: grafana-config-persistentvolumeclaim.yaml  grafana-config-pvc.yaml  grafana-data-pvc.yaml  grafana-deployment.yaml  grafana-service.yaml  nvcl-db-persistentvolumeclaim.yaml  nvcl-db-pvc.yaml
k8s/nvcl-report-app/: .helmignore  Chart.yaml
k8s/nvcl-report-app/templates/: db-update-cronjob.yaml  grafana-deployment.yaml  grafana-svc.yaml  ingress.yaml  nvcl-pvc.yaml  pg-db.yaml  pg-pvc.yaml  pg-svc.yaml  script.sh
scripts/: run_reports.sh  send_email.sh
src/: calculations.py  constants.py  helpers.py  make_pdf.py  make_reports.py  pdf.py  plots.py  report_table_data.py
src/db/: build_db.py  dbhelpers.py  export_db.py  export_kms.py  import_db.py  readwrite_db.py  schema.py  tsg_metadata.py
src/tsg_harvest/: harvest.py  metadata.csv.golden  metadata.csv.old  output  output2
test/: test_calc.py  test_cli.py  test_db.py  test_tsg_meta.py
test/data/: config.yaml  corrupted_config.yaml  metadata.csv  metadata_bigger.csv  missing_config.yaml  simple.db
tsg_parse/: read_tsg.py
