[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "nvcl_reporting"
version = "1.0.0"
description = "Generates reports about creation of Australian National Virtual Core Library (NVCL) datasets"
authors = [
    {name = "Vincent Fazio", email = "vincent.fazio@csiro.au"},
    {name = "Shane Mule", email = "shane.mule@csiro.au"},
]

dependencies = [
    "pandas",
    "matplotlib",
    "wordcloud",
    "periodictable",
    "seaborn",
    "xmltodict",
    "nvcl-kit>=1.2.3",
    "fpdf2",
    "pillow",
    "cython",
    "peewee>=3.16.2",
    "fiscalyear>=0.4.0",
    "numpy==1.26.4",
    "threddsclient>=0.4.5",
    "requests>=2.31.0",
]
requires-python = "<3.12,>=3.10"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
]
