[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "nvcl_reporting"
version = "1.0.0"
description = "Generates reports about creation of Australian National Virtual Core Library (NVCL) datasets"
authors = [
    {name = "Vincent Fazio", email = "vincent.fazio@csiro.au"},
    {name = "Shane Mule", email = "shane.mule@csiro.au"},
]

dependencies = [
    "numpy>=2.2.6",
    "pyproj==3.7.2",
    "pandas",
    "matplotlib",
    "wordcloud",
    "periodictable",
    "seaborn",
    "xmltodict",
    "nvcl-kit>=1.2.5",
    "fpdf2",
    "pillow",
    "cython",
    "peewee>=3.16.2",
    "fiscalyear>=0.4.0",
    "threddsclient>=0.4.5",
    "requests>=2.31.0",
    "python-dateutil"
]
requires-python = "<3.13,>=3.11"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "tox"
]
